<resources>
    <string name="app_name">EthiCalc</string>
    <string name="facebook_application_id" translatable="false">927685867400957</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb927685867400957</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For barcode -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Scan Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Scan Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- For NavHeader -->
    <string name="nav_impact_factor">Impact Factor</string>
    <string name="nav_email">Email Address Here</string>
    <string name="nav_name">Name Here</string>
    <string name="nav_impact_factor_val">Impact Factor Value</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="add_impact">Add items to impact factor</string>
    <string name="title_activity_item_info">ItemInfoActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!--For Geofence-->
    <string name="geokey">Geofence</string>

    <!-- For Impact Fragment -->
    <string name="impact_hi">Hi,&#160;</string>
    <string name="impact_hi2">.</string>
    <string name="impact_name">Name Here</string>
    <string name="impact_intro">Here\'s a look at your contributions so far for a better world.</string>
    <string name="impact_impactfactor">Impact Factor</string>
    <string name="impact_impactfactor2">This rates how ethical your purchases have been.</string>
    <string name="impact_share">SHARE</string>
    <string name="impact_impactchange">Change in Impact Factor</string>
    <string name="impact_impactchange2">Here\'s a history of how much your impact factor has changed. This week, your impact factor shifted by&#160;</string>
    <string name="impact_impactchangevalue">+5.35</string>
    <string name="impact_impactequiv">Your Impact in Real Terms</string>
    <string name="impact_impactequiv2">But what does your impact factor mean? Here are some real-world equivalents...</string>
    <string name="impact_equivtreevalue">23</string>
    <string name="impact_equivtreeintro">Trees saved</string>
    <string name="impact_equivcharityvalue">324</string>
    <string name="impact_equivcharityintro">Dollars donated to charity</string>
    <string name="impact_equivwagesvalue">7</string>
    <string name="impact_equivwagesintro">Fair wages paid</string>
    <string name="impact_equivwastevalue">32</string>
    <string name="impact_equivwasteintro">Kgs of waste prevented</string>
    <string name="impact_keepitup">Keep up the good work!</string>

    <!-- For Business Fragment -->
    <string name="business_name">Singapore Telecommunications Limited</string>
    <string name="business_type">Telecommunications</string>
    <string name="business_CSR">Normalized CSR Rating</string>
    <string name="business_CSRintro">CSR, or Corporate Social Responsibility, is a measure of how much effort a business puts into using responsible and sustainable business practices. This rating is aggregated and normalized from 512+ data sources. The overall CSR rating is comprised of 4 sub-ratings:</string>
    <string name="business_environment">Environment</string>
    <string name="business_environmentintro">The Environment rating covers the company\'s interactions with the environment at large, including use of natural resources, and its impact on Earth\'s ecosystems.</string>
    <string name="business_community">Community</string>
    <string name="business_communityintro">The Community rating covers the company\'s commitment and effectiveness within the local, national and global community in which it does business.</string>
    <string name="business_employees">Employees</string>
    <string name="business_employeesintro">The Employees rating covers diversity policies, labor relations and rights, compensation, benefits, and employee training, health and safety.</string>
    <string name="business_governance">Governance</string>
    <string name="business_governanceintro">The Governance rating covers disclosure of policies, board independence and diversity, executive compensation, attention to stakeholder concerns, and ethical leadership and compliance.</string>
    <string name="business_recentnews">Recent News on Company</string>

    <!-- For Product Fragment -->
    <string name="product_name">Lorem Ipsum Donut Bites This is a Long Name</string>
    <string name="product_msrp">$4.50</string>
    <string name="product_addtocart">ADD TO SHOPPING CART</string>
</resources>
