<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selector_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/impact_imageview_dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

            <TextView
                android:id="@+id/impact_textview_hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/impact_hi"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/impact_imageview_dp"
                app:layout_constraintTop_toTopOf="@+id/impact_imageview_dp" />

            <TextView
                android:id="@+id/impact_textview_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/impact_name"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/impact_textview_hi"
                app:layout_constraintTop_toTopOf="@+id/impact_imageview_dp" />

            <TextView
                android:id="@+id/impact_textview_hi2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/impact_hi2"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/impact_textview_name"
                app:layout_constraintTop_toTopOf="@+id/impact_imageview_dp" />

            <TextView
                android:id="@+id/impact_textview_intro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:text="@string/impact_intro"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/impact_imageview_dp"
                app:layout_constraintTop_toBottomOf="@+id/impact_textview_hi" />

            <com.github.lzyzsd.circleprogress.ArcProgress
                android:id="@+id/impact_progressbar_impactfactor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:arc_bottom_text="IMPACT"
                app:arc_finished_color="@color/colorAccent"
                app:arc_progress="30"
                app:arc_stroke_width="8dp"
                app:arc_suffix_text=" "
                app:arc_text_size="60sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/impact_imageview_dp" />

            <TextView
                android:id="@+id/impact_textview_impactfactor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/impact_impactfactor"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toEndOf="@+id/impact_progressbar_impactfactor"
                app:layout_constraintTop_toTopOf="@+id/impact_progressbar_impactfactor" />

            <TextView
                android:id="@+id/impact_textview_impactfactorintro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:text="@string/impact_impactfactor2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/impact_progressbar_impactfactor"
                app:layout_constraintTop_toBottomOf="@+id/impact_textview_impactfactor" />

            <Button
                android:id="@+id/impact_button_impactshare"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_buttongradient"
                android:text="@string/impact_share"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                app:layout_constraintBottom_toBottomOf="@+id/impact_progressbar_impactfactor"
                app:layout_constraintStart_toEndOf="@+id/impact_progressbar_impactfactor"
                app:layout_constraintTop_toBottomOf="@+id/impact_textview_impactfactorintro" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/impact_graph_impactdelta"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/impact_progressbar_impactfactor" />

            <TextView
                android:id="@+id/impact_textview_impactchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/impact_impactchange"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintTop_toBottomOf="@+id/impact_graph_impactdelta"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/impact_textview_impactchangeintro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:text="@string/impact_impactchange2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/impact_textview_impactchange" />

            <TextView
                android:id="@+id/impact_textview_impactchangevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/impact_impactchangevalue"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/impact_textview_impactchangeintro" />

            <Button
                android:id="@+id/impact_button_impactshare2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_buttongradient"
                android:text="@string/impact_share"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/impact_textview_impactchangevalue" />

            <TextView
                android:id="@+id/impact_textview_equiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/impact_impactequiv"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/impact_button_impactshare2" />

            <TextView
                android:id="@+id/impact_textview_equivintro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:text="@string/impact_impactequiv2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/impact_textview_equiv" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>