<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/selector_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewImpactFactor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingTop="0dp"
            android:text="@string/nav_impact_factor"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/material_purple_a700"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/imageViewStarIcon"
            app:layout_constraintLeft_toRightOf="@id/imageViewProfilePic" />

        <ImageView
            android:id="@+id/imageViewStarIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="42dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imageViewProfilePic"
            app:srcCompat="@drawable/ic_grade_black_24dp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/nav_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/imageViewProfilePic" />

        <TextView
            android:id="@+id/textViewImpactFactorVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:layout_marginLeft="8dp"
            android:text="@string/nav_impact_factor_val"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/material_pink_a200"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imageViewStarIcon" />

        <ImageView
            android:id="@+id/imageViewProfilePic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/textViewName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>
